[project]
name = "mirror-hub"
version = "0.2.0"
description = "Mirror Hub — 远程浏览器管理平台 + Chrome CDP 客户端 SDK（指纹隔离、反检测、健康检查抽象）"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
browser = ["rebrowser-playwright>=1.47.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mirror_hub"]

[tool.hatch.build.targets.wheel.shared-data]
"src/mirror_hub/stealth/presets" = "mirror_hub/stealth/presets"
